[package]
name = "dawnflow"
version = "0.1.0"
edition = "2021"

[features]
default = ["in_memory_only"]
in_memory = []
in_memory_only = ["in_memory"]
nats=[]

[dependencies]
async-trait = "0.1"
elegant-departure = "0.3.1"
eyre = "0.6"
serde = "1"
thiserror = "2"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"


[dev-dependencies]
tracing-subscriber = { version = "0.3" }

[[example]]
name = "in_memory"
path = "examples/in_memory.rs"
required-features = ["in_memory_only"]
