[package]
name = "dawnflow"
version = "0.1.0"
edition = "2021"

[features]
default = ["nats"]
in_memory = []
in_memory_only = ["in_memory"]
nats=[ "dep:async-nats" ]

[dependencies]
async-trait = "0.1"
elegant-departure = { version = "0.3", features = ["tokio"] }
eyre = "0.6"
rmp-serde = "1.3.0"
serde = "1"
serde_json = "1.0.138"
thiserror = "2"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"

async-nats = { version = "0.40", optional = true }
futures = "0.3.31"

[dev-dependencies]
tracing-subscriber = { version = "0.3" }

[[example]]
name = "in_memory"
path = "examples/in_memory.rs"
required-features = ["in_memory_only"]

[[example]]
name = "nats"
path = "examples/nats.rs"
# todo change this
required-features = []
